# ChangeLog for dev-python/gconf-python
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/gconf-python/ChangeLog,v 1.11 2009/04/28 14:26:52 armin76 Exp $

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org> gconf-python-2.22.3.ebuild:
  arm/sh stable

  23 Mar 2009; Jeroen Roovers <jer@gentoo.org> gconf-python-2.22.3.ebuild:
  Stable for HPPA (bug #258040).

  17 Mar 2009; Raúl Porcel <armin76@gentoo.org> gconf-python-2.22.3.ebuild:
  ia64/sparc stable wrt #258040

  08 Mar 2009; Markus Meier <maekke@gentoo.org> gconf-python-2.22.3.ebuild:
  amd64/x86 stable, bug #258040

  05 Mar 2009; Brent Baude <ranger@gentoo.org> gconf-python-2.22.3.ebuild:
  Marking gconf-python-2.22.3 ppc stable for bug 258040

  03 Mar 2009; Brent Baude <ranger@gentoo.org> gconf-python-2.22.3.ebuild:
  Marking gconf-python-2.22.3 ppc64 stable for bug 258040

  14 Feb 2009; Tobias Klausmann <klausman@gentoo.org>
  gconf-python-2.22.3.ebuild:
  Stable on alpha, bug #258040

  01 Dec 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -gconf-python-2.22.1.ebuild, gconf-python-2.22.3.ebuild:
  Remove python_need_rebuild, it is now in the eclass.

  27 Oct 2008; Ali Polatel <hawking@gentoo.org> gconf-python-2.22.1.ebuild,
  gconf-python-2.22.3.ebuild:
  Use python_need_rebuild.

*gconf-python-2.22.3 (26 Sep 2008)

  26 Sep 2008; Mart Raudsepp <leio@gentoo.org> +gconf-python-2.22.3.ebuild:
  Version bump

*gconf-python-2.22.1 (24 Aug 2008)

  24 Aug 2008; Arun Raghavan <ford_prefect@gentoo.org> +metadata.xml,
  +gconf-python-2.22.1.ebuild:
  Initial import of gnome-python split ebuilds. This package installs
  bindings for the GConf libraries.
