@@ -1,4 +1,6 @@
 DIST gnome-python-2.22.3.tar.bz2 588459 RMD160 81772db78abe864dcbf3c89b7f864dd3b8ba41d3 SHA1 35eafe4f5ab9ee003a573dcf26699d3b03d52d5a SHA256 a1763ef40aa0fc152e1afe6be6b01d69ba305273bd4bd44cad018da42d1bb559
+DIST gnome-python-2.26.1.tar.bz2 523132 RMD160 054901ecd209953225ccfa725fdd9164447fbb49 SHA1 789627d4107aa50cd7fc763c4de015032346524e SHA256 ede0203f1eec22b3ed4a91c7b769e437859e5bc4b89a8f8e80b3f7ca62317098
 EBUILD gconf-python-2.22.3.ebuild 565 RMD160 fa9b7eb1f65312a1899f98597e8ca32df7d41d8b SHA1 2c3749863ae06044c37f95ebfd0bb2d413ed5b70 SHA256 9fa422bcfe123e117ba15360996a22ba73686436dc83ecfcaa87ebf2abde3b9b
-MISC ChangeLog 1700 RMD160 77af51261620c623e00f358aef9d78b12ca74265 SHA1 670efaa155694816cc884496d9e4b9febc8cd7ec SHA256 c1a4b2e2deb45f08fd05b255faf439099e9d76670ac02db997a36f29206fdd65
+EBUILD gconf-python-2.26.1.ebuild 560 RMD160 c7f36be82d70695f16cdb25b8a3415ac65563fbe SHA1 04445e5a286d4aa6fe3aac7d9ae907e73d57a27c SHA256 a97be066762d9dc671f79882022c41e6c3428dd0a40807be87c9d22fa6671cfe
+MISC ChangeLog 1872 RMD160 480ff6dcc81e7504c81c69a8aa2874bd6f19d054 SHA1 981fcbb3d7f7ed3c34ab1c47a43d3f61eae6b1a0 SHA256 498f398d35961f6def9b67193c592527daaa4590e8644c140ddc1a0c495a5762
 MISC metadata.xml 178 RMD160 ec0937689a645defb2b870b481c4d4db57a0fa73 SHA1 aa77d904544ca6e6e684658ec652463fdb2ca58d SHA256 ccdf4a821074a281d4fd442460b65f57e77546cea36756c435db5529d22fa2a6
