@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/gconf-python
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/gconf-python/ChangeLog,v 1.11 2009/04/28 14:26:52 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/gconf-python/ChangeLog,v 1.12 2009/05/10 21:47:43 eva Exp $
+
+*gconf-python-2.26.1 (10 May 2009)
+
+  10 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  +gconf-python-2.26.1.ebuild:
+  New version for GNOME 2.26. Clean up old revisions.
 
   28 Apr 2009; Raúl Porcel <armin76@gentoo.org> gconf-python-2.22.3.ebuild:
   arm/sh stable
